# librarian

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
docs/: env-reference.md  install.md  setup-guide.md
docs/agents/: domain.md  issue-tracker.md
scripts/: __init__.py  _ragflow_client.py  deposit.py  gs_full_scrape.py  librarian_pipeline.py  mineru_api.py  pdf_downloader.py  pipeline_async.py  ragflow_uploader.py  scihub_downloader.py  zotero_linked_pipeline.py
